syntax = "proto3";

package tonbeacon.v1;

option go_package = "./proto";

service TonBeacon {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc CloseAccount (CloseAccountRequest) returns (CloseAccountResponse) {}
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
}

message Error {
  uint32 code = 1;
  string message = 2;
}

message Account {
  string account_id = 1;
  uint32 subwallet_id = 2;
  string address = 3;
}

message CreateAccountRequest {
  string account_id = 1;
}

message CreateAccountResponse {
  Error error = 1; 
  Account account = 2;
}


message CloseAccountRequest {
  string account_id = 1;
}

message CloseAccountResponse {
  Error error = 1;
}

message GetBalanceRequest {
  string account_id = 1;
}

message GetBalanceResponse {
  Error error = 1;
  int64 balance = 2;
}